[gd_scene load_steps=2 format=3 uid="uid://post_launch_dashboard"]

[ext_resource type="Script" path="res://scripts/ui/PostLaunchDashboard.gd" id="1"]

[node name="PostLaunchDashboard" type="CanvasLayer"]
layer = 99
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 430.0
offset_top = 20.0
offset_right = 900.0
offset_bottom = 580.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "ðŸ“Š Post-Launch Dashboard (F2)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading session stats..."

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="LevelStats" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading level stats..."

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="CrashLabel" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Loading crash data..."
